[TASK] Fix whitespace and comments

--- a/chrome-extension/src/css/popup.css
+++ b/chrome-extension/src/css/popup.css
@@ -709,6 +709,10 @@ canvas {
   white-space: nowrap;
 }
 
+.whitespace-normal {
+  white-space: normal;
+}
+
 .w-full {
   width: 100%;
 }
